--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -8,7 +8,7 @@
 .forecastContainer {
 	display: flex;
 	justify-content: space-between;
-	max-width: 700px;
+	max-width: 750px;
 	text-align: center;
 	margin: 10px auto;
 }
